<resources>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="retype_password">Retype password</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="password_change">Password has been changed</string>
    <string name="email_not_set">Email is not set</string>
    <string name="email_empty">Email value not set!</string>
    <string name="email_not_exists">Email does not exists!</string>
    <string name="passwords_not_match">Passwords do not match</string>
    <string name="enter_email">Please enter an email...</string>
    <string name="enter_password">Please enter a password...</string>
    <string name="book_welcome_title">Eight</string>
    <string name="book_welcome_message">Booking management</string>
    <string name="continue_as_firm">Continue as Firm</string>
    <string name="continue_as_customer">Continue as Customer</string>
    <string name="no_internet_access">There is no internet access</string>
    <string name="reset_string">Reset</string>
    <string name="active_firms_title">Active firms</string>
    <string name="no_permission_to_call">You have no permission to make a phone call!</string>
    <string name="forgot_password_string">Forgot password?</string>
    <string name="editFirm_string">Edit Firm</string>
    <string name="activate_firm_string">Activate Firm</string>
    <string name="deactivate_firm_string">Deactivate Firm</string>
    <string name="edit_firm_schedule_string">Firm Schedule</string>
    <string name="signOut_string">Sign out</string>
    <string name="privacyPolicy_string">Privacy Policy</string>
    <string name="delete">Delete</string>
    <string name="subscribe_description">In order to use Eight as a firm you will need to subscribe. \n\n The subscription costs 30 LEI per month, first month is free, then for the second month you get a discount of 10 LEI. \n\n You can cancel the subscription at any time.</string>
    <string name="subscribe_button">Subscribe</string>
    <string name="status">Active</string>
    <string name="cancel">Cancel</string>
    <string name="starts">Starts</string>
    <string name="ends">Ends</string>
    <string name="pending">Pending</string>
    <string name="finished">Finished</string>
    <string name="rejected">Rejected</string>
    <string name="and"> and </string>
    <string name="no_product_selected">You cannot make a booking with no product selected!</string>
    <string name="edit">Edit</string>
    <string name="close">Close</string>
    <string name="add">Add</string>
    <string name="profile_string">Profile</string>
    <string name="hint_price">Price</string>
    <string name="product_duration">Duration</string>
    <string name="set_employee_schedule_title">Set employee schedule</string>
    <string name="owner_firm_title">Pending bookings</string>
    <string name="owner_customer_title">Your bookings</string>
    <string name="employee_categories_text">Categories</string>
    <string name="employee_name_hint">Employee Name</string>
    <string name="product_name_hint">Product Name</string>
    <string name="previous_day">Yesterday</string>
    <string name="next_day">Tomorrow</string>
    <string name="product_price_hint">Product Price</string>
    <string name="product_categories_text">Categories</string>
    <string name="category_name">Name</string>
    <string name="pending_bookings_title">Pending bookings</string>
    <string name="login_customer_title">Login or sign up customer</string>
    <string name="login">Login</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_in_later">Sign in later</string>
    <string name="stay_logged_in">Stay logged in?</string>
    <string name="register_customer_title">Register customer</string>
    <string name="username">Username</string>
    <string name="phone_number">Phone number</string>
    <string name="register_customer">Register</string>
    <string name="login_firm_title">Login or sign up firm</string>
    <string name="register_firm_title">Set firm details</string>
    <string name="firm_address">Address</string>
    <string name="firm_next_button">Next</string>
    <string name="set_firm_schedule_title"> hi %1$s \'s schedule</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>
    <string name="workingHours">Working hours</string>
    <string name="am">AM</string>
    <string name="pm">PM</string>
    <string name="amExample">8</string>
    <string name="pmExample">20</string>
    <string name="apply_firm_schedule">Apply</string>
    <string name="hours">Hours</string>
    <string name="minutes">Minutes</string>
    <string name="app_name">Eight</string>
    <string name="firmSchedule">Schedule</string>
    <string name="productName">Name</string>
    <string name="productPrice">Price [LEI]</string>
    <string name="category_and_products_navigation_button_string">Firm services</string>
    <string name="employee_navigation_button_string">Employees</string>
    <string name="schedule_navigation_button_string">Schedule</string>
    <string name="firm_details">Firm Details</string>
    <string name="hint_product_name">Name</string>
    <string name="hint_product_price">Price</string>
    <string name="choose_employee">Choose employee</string>
    <string name="categories">Categories</string>
    <string name="products">Products</string>
    <string name="activate_firm">Are you sure you want to activate firm?</string>
    <string name="deactivate_firm">Are you sure you want to deactivate firm?</string>
    <string name="delete_booking">Are you sure you want to cancel this booking?</string>
    <string name="active_firms_menu_string">All firms</string>
    <string name="active_firms_as_map">Map</string>
    <string name="active_firms_as_list">List</string>
    <string name="title_activity_privacy_policy">PrivacyPolicyActivity</string>
    <string name="privacy_policy_text">
        "\t\t\t\t\t\t\t Privacy Policy \n\n\n"
        "Robert Voicu built the Eight app as an Ad Supported app. This SERVICE is provided by Robert Voicu"
        "at no cost and is intended for use as is. \n"
        "This page is used to inform visitors regarding my policies with the collection, use, and disclosure of"
        "Personal Information if anyone decided to use my Service.\n"
        "If you choose to use my Service, then you agree to the collection and use of information in relation to this policy."
        "The Personal Information that I collect is used for providing and improving the Service."
        "I will not use or share your information with anyone except as described in this Privacy Policy. \n"
        "The terms used in this Privacy Policy have the same meanings as in our Terms and Conditions,"
        "which is accessible at Eight unless otherwise defined in this Privacy Policy.\n\n"

        "Information Collection and Use\n\n"

        "For a better experience, while using our Service, I may require you to provide us with certain personally identifiable information,"
        "including but not limited to Name,Surname,Email,Phone Number. The information that I request will be retained on your device and is"
        "not collected by me in any way.\n"
        "The app does use third party services that may collect information used to identify you.\n"
        "Link to privacy policy of third party service providers used by the app"
        "Google Play Services"

        "Log Data\n\n"
        "I want to inform you that whenever you use my Service, in a case of an error in the app I collect data and information"
        "(through third party products) on your phone called Log Data. This Log Data may include information such as your device"
        "Internet Protocol (“IP”) address, device name, operating system version, the configuration of the app when utilizing my Service,"
        "the time and date of your use of the Service, and other statistics.\n\n"


        "Cookies\n\n"

        "Cookies are files with a small amount of data that are commonly used as anonymous unique identifiers.\n"
        "These are sent to your browser from the websites that you visit and are stored on your device's internal memory.\n"
        "This Service does not use these “cookies” explicitly. However, the app may use third party code and"
        "libraries that use “cookies” to collect information and improve their services.\n"
        "You have the option to either accept or refuse these cookies and know when a cookie is being sent to your device.\n"
        "If you choose to refuse our cookies, you may not be able to use some portions of this Service.\n"


        "Service Providers\n\n"


        "I may employ third-party companies and individuals due to the following reasons:\n"
        "\tTo facilitate our Service;\n"
        "\tTo provide the Service on our behalf;\n"
        "\tTo perform Service-related services; or\n"
        "\tTo assist us in analyzing how our Service is used.\n\n"

        "I want to inform users of this Service that these third parties have access to your Personal Information.\n"
        "The reason is to perform the tasks assigned to them on our behalf. \nHowever, they are obligated not to"
        "disclose or use the information for any other purpose.\n"


        "Security\n\n"

        "I value your trust in providing us your Personal Information, thus we are striving to use commercially"
        "acceptable means of protecting it. \nBut remember that no method of transmission over the internet,"
        "or method of electronic storage is 100% secure and reliable, and I cannot guarantee its absolute security.\n"

        "Links to Other Sites\n\n"

        "This Service may contain links to other sites. If you click on a third-party link, you will be directed to that site."
        "Note that these external sites are not operated by me. Therefore, I strongly advise you to review the"
        "Privacy Policy of these websites. I have no control over and assume no responsibility for the content,"
        "privacy policies, or practices of any third-party sites or services.\n\n"

        "Children’s Privacy\n\n"


        "These Services do not address anyone under the age of 13. I do not knowingly collect personally"
        "identifiable information from children under 13. In the case I discover that a child under"
        "13 has provided me with personal information, I immediately delete this from our servers."
        "If you are a parent or guardian and you are aware that your child has provided us with personal information,"
        "please contact me so that I will be able to do necessary actions.\n\n"

        "Changes to This Privacy Policy\n\n"


        "I may update our Privacy Policy from time to time. Thus, you are advised to review"
        "this page periodically for any changes. I will notify you of any changes by posting the new Privacy Policy on this page."
        "These changes are effective immediately after they are posted on this page."

    </string>
    <string name="book_customer_name">Customer name</string>
    <string name="book_customer">Customer</string>
    <string name="reset_password">Do you want to reset your password?</string>
    <string name="sign_out">Are you sure you want to sign out?</string>
    <string name="update_address">Update address</string>
    <string name="enter_value">Please enter a value!</string>
    <string name="signin_or_login">Sign in or log in</string>
    <string name="logged_in_to_book">You have to be logged in to book!</string>
    <string name="name">Name</string>
    <string name="your_bookings">Your bookings</string>
    <string name="firm_services">Services</string>
</resources>