<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/titanium"
    android:orientation="vertical">

    <TextView
        android:id="@+id/layoutTitleTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView15"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:fontFamily="@font/montserrat"
            android:gravity="center"
            android:text="@string/product_categories_text"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="14sp"
            android:textStyle="normal" />

        <Spinner
            android:id="@+id/categoriesSpinnerId"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:gravity="center"
            android:spinnerMode="dropdown" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView20"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:fontFamily="@font/montserrat"
            android:gravity="center"
            android:text="@string/hint_product_name"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="14sp"
            android:textStyle="normal"
            tools:fontFamily="@font/montserrat" />

        <EditText
            android:id="@+id/productNameEditTextId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:ems="10"
            android:fontFamily="@font/open_sans_semibold"
            android:gravity="center"
            android:hint="@string/product_name_hint"
            android:inputType="textPersonName"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/darker_gray"
            android:textSize="14sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView21"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:fontFamily="@font/montserrat"
            android:gravity="center"
            android:text="@string/hint_product_price"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/priceEditTextId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:ems="10"
            android:fontFamily="@font/open_sans_semibold"
            android:gravity="center"
            android:hint="@string/product_price_hint"
            android:inputType="number"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/darker_gray"
            android:textSize="14sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:fontFamily="@font/montserrat"
            android:gravity="center"
            android:text="@string/product_duration"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="14sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:gravity="center"
            android:orientation="horizontal">

            <Spinner
                android:id="@+id/productHoursSpinnerId"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:focusable="auto"
                android:spinnerMode="dropdown" />
            <!--
            <EditText
                android:id="@+id/durationHoursEditTextId"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:ems="10"
                android:fontFamily="@font/open_sans_semibold"
                android:gravity="center"
                android:hint="@string/hours"
                android:inputType="numberSigned"
                android:textAlignment="center"
                android:textColor="@android:color/white"
                android:textColorHint="@android:color/darker_gray"
                android:textSize="14sp"
                android:textStyle="bold" />
            -->
            <Spinner
                android:id="@+id/productMinutesSpinnerId"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:focusable="auto"
                android:spinnerMode="dropdown" />
            <!--
            <EditText
                android:id="@+id/durationMinutesEditTextId"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:ems="10"
                android:fontFamily="@font/open_sans_semibold"
                android:gravity="center"
                android:hint="@string/minutes"
                android:inputType="numberSigned"
                android:textAlignment="center"
                android:textColor="@android:color/white"
                android:textColorHint="@android:color/darker_gray"
                android:textSize="14sp"
                android:textStyle="bold" />
              -->
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="16dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/insertOrEditProductButtonId"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="4dp"
            android:layout_weight="1"
            android:background="@color/dark_green"
            android:fontFamily="@font/open_sans_semibold"
            android:text="@string/add"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="14sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/deleteProductButtonId"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="4dp"
            android:layout_weight="1"
            android:background="@color/dark_green"
            android:fontFamily="@font/open_sans_semibold"
            android:text="@string/delete"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            android:textStyle="bold"
            android:visibility="gone" />

        <Button
            android:id="@+id/productCloseButtonId"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="4dp"
            android:layout_weight="1"
            android:background="@color/dark_green"
            android:fontFamily="@font/open_sans_semibold"
            android:text="@string/close"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="14sp"
            android:textStyle="bold" />

    </LinearLayout>
</LinearLayout>